 /* $Id: changelog,v 1.624 2000-01-09 14:12:37 cbratschi Exp $ */

 2000-01-09: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32/NEW: implemented scrollbar nc handling
		      windows without menus work now fine

 2000-01-08: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: ModifyMenuA bugfix (changing menu ids didn't work)
                  OSLibGetMsg bugfix + WM_QUIT translation fix
	- OLE32/OLEAUT32/OLESVR32/OLEDLG/OLECLI32: 
                  Added Wine-like license that supercedes the main Odin license
	- CRTDLL: Fixed many register based floating point exports (CRTDLL__CIcos,
                  CRTDLL__CIatan etc etc)

 2000-01-08: Jens Wiessner <wiessnej@rfi.de>
	- CRTDLL: Compile fix

 2000-01-08: Patrick Haller <phaller@gmx.net>
	- SHELL32:	Update: to WINE level 2000/01/08
	- KERNEL32:	Add:	stub for GetDiskFreeSpaceExAW

 2000-01-06: Christoph Bratschi <cbratschi@datacomm.ch>
	- GDI32: added PatBlt support for negative width/height

 2000-01-06: Sander van Leeuwen <sandervl@xs4all.nl>
	- ADVAPI32: Implemented StartServiceCtrlDispatcherA/W
                    Faked RegisterServiceCtrlHandlerA/W (TODO)
                    Partly implemented SetServiceBits/SetServiceStatus
                    Improved QueryServiceStatus
                    Call RtlCreateAcl in InitializeAcl
	- LZ32: Create correct library
	- CRTDLL: Fixed CRTDLL__wcsnicmp (use Wine version)
	- VERSION: Fixed VerQueryValue32A and merged with latest Wine sources
                   (991212) (-> fixes errors in RealPlayer)
	- USER32: GetMenuStringA fix (return length of string if string pointer
                  or size parameter == 0)

 2000-01-05: Jens Wiessner <wiessnej@rfi.de>
	- TWAIN_32: Update

 2000-01-05: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32/NEW: single window works now

 2000-01-05: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32/NTDLL: Partially implemented NtOpenThreadToken
                          (should be changed)